Crypsis: Move all images and js into media folder

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /**
 * Kunena Component
 * @package Kunena.Template.Bootstrap
@@ -50,7 +49,7 @@ img.kbbcode {
 		margin: 0;
 		padding: 0;
 		a {
-			background-image: url("../media/iconsets/editor/default/default.png");
+			background-image: url("iconsets/editor/default/default.png");
 			background-repeat: no-repeat;
 			display: block;
 			height: 18px;
@@ -208,7 +207,7 @@ img.kbbcode:hover {
 #kattachments {
 	line-height: 18px;
 	a {
-		background-image: url("../media/iconsets/editor/default/default.png");
+		background-image: url("iconsets/editor/default/default.png");
 		background-repeat: no-repeat;
 		display: inline-block;
 		height: 18px;
