--- a/components/com_kunena/site/template/crypsis/less/icons.less
+++ b/components/com_kunena/site/template/crypsis/less/icons.less
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /**
 * Kunena Component
 * @package Kunena.Template.Bootstrap
@@ -10,31 +9,31 @@
 
 
 .ktopicmy {
-	background-image: url("../images/icons/myflag.png");
+	background-image: url("icons/myflag.png");
 	width: 16px;
 	height: 16px;
 	margin-left: 2px;
 }
 .kforummoderated {
-	background: url("../images/icons/tmoder.gif") no-repeat left center;
+	background: url("icons/tmoder.gif") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
 .ktopicattach {
-	background: url("../images/icons/attachment.png") no-repeat left center;
+	background: url("icons/attachment.png") no-repeat left center;
 	margin: 2px;
 	width: 32px;
 	height: 32px;
 	float: right;
 }
 .kfavoritestar-grey {
-	background: url("../images/icons/favoritestar-grey.png") no-repeat left center;
+	background: url("icons/favoritestar-grey.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
 .ktopiclocked,
 .kforumlocked {
-	background: url("../images/icons/lock_sm.png") no-repeat left center;
+	background: url("icons/lock_sm.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
@@ -50,12 +49,12 @@
 	background-color: #ffc;
 }
 .kunreadforum {
-	background: url("../images/icons/folder.png") no-repeat left center;
+	background: url("icons/folder.png") no-repeat left center;
 	width: 32px;
 	height: 32px;
 }
 .krss {
-	background: url("../images/icons/rss.png") no-repeat left center;
+	background: url("icons/rss.png") no-repeat left center;
 	width: 24px;
 	height: 24px;
 }
@@ -69,7 +68,7 @@
 	cursor: pointer;
 }
 .kmark-read {
-	background: url("../images/icons/mark-read.png") no-repeat left center;
+	background: url("icons/mark-read.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
@@ -84,14 +83,14 @@ div.krss-block {
 	color: #888;
 }
 .ktopicpoll {
-	background: url("../images/icons/poll.png") no-repeat left center;
+	background: url("icons/poll.png") no-repeat left center;
 	margin: 2px;
 	width: 32px;
 	height: 32px;
 	float: right;
 }
 .kforumbottom {
-	background: url("../images/icons/bottom_arrow.gif") no-repeat left center;
+	background: url("icons/bottom_arrow.gif") no-repeat left center;
 	width: 18px;
 	height: 15px;
 }
@@ -99,7 +98,7 @@ div.krss-block {
 	margin: 10px 5px;
 }
 .kfavoritestar {
-	background: url("../images/icons/favoritestar.png") no-repeat left center;
+	background: url("icons/favoritestar.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
@@ -107,23 +106,23 @@ div.krss-block {
 	font-weight: bold;
 }
 .krss-small {
-	background: url("../images/icons/rss-small.png") no-repeat left center;
+	background: url("icons/rss-small.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
 .kforumtop {
-	background: url("../images/icons/top_arrow.gif") no-repeat left center;
+	background: url("icons/top_arrow.gif") no-repeat left center;
 	width: 18px;
 	height: 15px;
 }
 .kreadforum,
 .knotloginforum {
-	background: url("../images/icons/folder_nonew.png") no-repeat left center;
+	background: url("icons/folder_nonew.png") no-repeat left center;
 	width: 32px;
 	height: 32px;
 }
 .kunreadforum-sm {
-	background: url("../images/icons/folder_sm.png") no-repeat left center;
+	background: url("icons/folder_sm.png") no-repeat left center;
 	width: 12px;
 	height: 12px;
 	margin-right: 3px;
@@ -131,7 +130,7 @@ div.krss-block {
 }
 .kreadforum-sm,
 .knotloginforum-sm {
-	background: url("../images/icons/folder_nonew_sm.png") no-repeat left center;
+	background: url("icons/folder_nonew_sm.png") no-repeat left center;
 	width: 12px;
 	height: 12px;
 	margin-right: 3px;
