--- a/components/com_kunena/site/template/crypsis/less/profile.less
+++ b/components/com_kunena/site/template/crypsis/less/profile.less
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /**
 * Kunena Component
 * @package Kunena.Template.Bootstrap
@@ -15,7 +14,7 @@
 	display: inline-block;
 	vertical-align: text-top;
 	margin-right: 3px;
-	background-image: url("../media/iconsets/profile/default/default.png");
+	background-image: url("iconsets/profile/default/default.png");
 }
 .kicon-profile-skype-off {
 	background-position: 0 -920px;
