--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /**
 * Kunena Component
 * @package Kunena.Template.Crypsis
@@ -233,7 +232,7 @@ input[type='checkbox'] {
 	margin: 4px 3px 0;
 }
 #kbbcode-toolbar li a {
-	background-image: url("../media/iconsets/editor/default/default.png");
+	background-image: url("iconsets/editor/default/default.png");
 	background-repeat: no-repeat;
 	display: block;
 	height: 18px;
