--- a/components/com_kunena/site/template/crypsis/less/main.less
+++ b/components/com_kunena/site/template/crypsis/less/main.less
@@ -8,6 +8,10 @@
 * @link http://www.kunena.org
 **/
 
+/*
+ * All url()'s should be relative paths from media folder inside the template or 'JROOT/media/kunena'.
+ * Less parser will automatically search for all the files from the lookup paths and use the first match.
+ */
 #kunena.layout {
 	@import 'general';
 	@import 'editor';
