Crypsis: Add debug less file

--- a/components/com_kunena/site/template/crypsis/less/main.less
+++ b/components/com_kunena/site/template/crypsis/less/main.less
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /**
 * Kunena Component
-* @package Kunena.Template.Bootstrap
+* @package Kunena.Template.Crypsis
 *
 * @copyright (C) 2008 - 2013 Kunena Team. All rights reserved.
 * @license http://www.gnu.org/copyleft/gpl.html GNU/GPL
@@ -18,4 +18,5 @@
 	@import 'icons';
 	@import 'user';
 	@import 'profile';
+/*	@import 'debug'; */
 }
