#2107 Joomla 3.2 - Kunena Plug-in Manager : ordering contains errors

--- a/components/com_kunena/admin/models/forms/plugin.xml
+++ b/components/com_kunena/admin/models/forms/plugin.xml
@@ -56,7 +56,7 @@
 
 		<field
 			name="ordering"
-			type="ordering"
+			type="Pluginordering"
 			class="inputbox"
 			label="JFIELD_ORDERING_LABEL"
 			description="JFIELD_ORDERING_DESC" />
