Fix #2107 part 2: Now uses the same ordering type in J!2.5 and J!3.0

--- a/components/com_kunena/admin/models/forms/plugin25.xml
+++ b/components/com_kunena/admin/models/forms/plugin25.xml
@@ -56,7 +56,7 @@
 
 		<field addfieldpath="administrator/components/com_plugins/models/fields"
 			name="ordering"
-			type="Pluginordering"
+			type="ordering"
 			class="inputbox"
 			label="JFIELD_ORDERING_LABEL"
 			description="JFIELD_ORDERING_DESC" />
