Crypsis html: Fix small issue's

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -51,7 +51,8 @@ active, a:focus {
 .nav-pills > .active > a:hover,
 .dropdown-menu a,
 .navbar .nav > li > a,
-.btn-link:hover {
+.btn-link:hover,
+.navbar .btn-navbar {
 	color: #08c;
 }
 .navbar .nav > li > a {
@@ -102,7 +103,7 @@ active, a:focus {
 	padding-top: 10px;
 }
 .pagination {
-	margin: 0;
+	margin: 5px 0 0;
 }
 .kunena-row {
 	width: 105.5% !important;
@@ -207,4 +208,11 @@ hr {
 .active.btn-success {
 	background-color:transparent;
 	background-image:none;
+}
+form > table > thead > tr > td > ul {
+	margin:auto;
+}
+.table th, .table td {
+	border-bottom: 1px solid #dddddd;
+	border-top:0px;
 }
