Broken google maps controls

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -1091,3 +1091,10 @@ ul.autocompleter-choices li {
 	content: none !important;
 }
 /* --------------------------------------------------------------- */
+
+/* Fix to avoid broken controls with google maps
+----------------------------------------------------------------------------------------------- */
+#Kunena div.kmsgbody div.kmsgtext div.kgooglemap img { 
+	max-width: none !important;
+}
+/* --------------------------------------------------------------- */
