Issue #2184 K3.0 Backend: Prune topics option to small

--- a/components/com_kunena/admin/media/css/joomla30/layout.css
+++ b/components/com_kunena/admin/media/css/joomla30/layout.css
@@ -75,3 +75,7 @@
     font-size: inherit;
     line-height: 150%
 }
+/* Fix span1 width isis */
+#adminForm > fieldset > table > tbody > tr:nth-child(2) > td:nth-child(2) > div {
+	display:inline !important;
+}
