Crypsis html-update
^ pagination: Recent/Category/index
^ Search
# hide avatar mobile
- Removed $this->profile->isMyself()

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -182,9 +182,6 @@ img {
 .form-search {
 	margin: 0px;
 }
-.dropdown-toggle {
-	max-height:28px;
-}
 .progress {
 	margin-bottom:0px;
 }
@@ -197,7 +194,6 @@ img {
   -moz-border-radius: 20%;
   border-radius: 20%;
 	padding: 0px;
-	margin-bottom:10px;
 }
 select, textarea, input[type='text'], input[type='password'], input[type='datetime'], input[type='datetime-local'], input[type='date'], input[type='month'], input[type='time'], input[type='week'], input[type='number'], input[type='email'], input[type='url'], input[type='search'], input[type='tel'], input[type='color'], .uneditable-input {
 	margin-bottom:0px;
@@ -215,4 +211,7 @@ form > table > thead > tr > td > ul {
 .table th, .table td {
 	border-bottom: 1px solid #dddddd;
 	border-top:0px;
+}
+.kcheckall {
+	margin-right:9px;
 }
