Issue #2158 J32 Blue Eagle: Skinner doesn't work any more

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.skinner.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.skinner.css
@@ -154,6 +154,7 @@
 #Kunena .kbutton-back {
     color: inherit;
 }
+#Kunena input,
 #Kunena input.kinput,
 #Kunena .kfile-input-textbox {
     background:  0 0 no-repeat;
