--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -22,6 +22,9 @@ active, a:focus {
 .knewchar {
 	padding-left: 3px;
 }
+.kfrontend {
+	margin-top:20px;
+}
 .kfrontend:hover .btn,
 .kprofile:hover .kinfo,
 .kprofile:hover .kinfo1 {
@@ -71,7 +74,6 @@ active, a:focus {
 	padding-top:20px;
 }
 .bubble {
-	background-color: #FFF;
 	border-radius: 5px;
 	box-shadow: 0 0 6px #B2B2B2;
 	display: inline-block;
@@ -87,7 +89,6 @@ active, a:focus {
 .btn-marging {
 	margin: 0;
 }
-
 .kreply-form {
 	display: none;
 	margin-left: 20px;
@@ -103,11 +104,7 @@ active, a:focus {
 	padding-top: 10px;
 }
 .pagination {
-	margin: 5px 0 0;
-}
-.kunena-row {
-	width: 105.5% !important;
-	margin-left: -19px;
+	margin: 0;
 }
 .kavatar {
 	vertical-align: middle;
@@ -182,9 +179,6 @@ img {
 .form-search {
 	margin: 0px;
 }
-.dropdown-toggle {
-	max-height:28px;
-}
 .progress {
 	margin-bottom:0px;
 }
@@ -197,7 +191,6 @@ img {
   -moz-border-radius: 20%;
   border-radius: 20%;
 	padding: 0px;
-	margin-bottom:10px;
 }
 select, textarea, input[type='text'], input[type='password'], input[type='datetime'], input[type='datetime-local'], input[type='date'], input[type='month'], input[type='time'], input[type='week'], input[type='number'], input[type='email'], input[type='url'], input[type='search'], input[type='tel'], input[type='color'], .uneditable-input {
 	margin-bottom:0px;
@@ -215,4 +208,27 @@ form > table > thead > tr > td > ul {
 .table th, .table td {
 	border-bottom: 1px solid #dddddd;
 	border-top:0px;
+}
+.profile-avatar {
+	margin:5px;
+}
+.profilebox {
+	margin-top:15px;
+}
+h1,h2,h3,h4,h5,h6,h7 {
+	margin:5px !important;
+}
+ul li {
+	list-style:none;
+}
+inline {
+	display: inline-block;
+  width: 200px;
+  height: 100px;
+  margin: 1em;
+}
+.modal-header,
+.modal-body,
+.modal-footer {
+  padding: 15px;
 }
