Crypsis: Cleanup and fixes issues

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -61,9 +61,7 @@ active, a:focus {
 .navbar .nav > li > a {
 	padding: 11px 8px 11px;
 }
-.navbar .mobile, .navbar .mobile .btn-navbar {
-	padding: 3px 8px 3px !important;
-}
+
 #tow {
 	display: none;
 }
@@ -233,6 +231,18 @@ inline {
 .modal-footer {
   padding: 15px;
 }
-.kcheckall {
-	margin-right:9px;
+ul,ol {
+	padding:0 !important;
+}
+a:focus, 
+.btn:focus {
+	outline: none !important;
+}
+.qreply {
+	min-height:150px !important;
+	width:98%;
+}
+.last-post,
+.header-desc {
+	padding: 4px 8px;;
 }
