Html fixes and less fixes

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -225,7 +225,7 @@ width:80px;
 .ktxtarea {
 margin-left:-80px
 }
-input[type=radio] {
+#postform input[type=radio] {
 	display:none; 
 	margin:10px;
 }
