Add emojis support to add smilies into textarea to replace the old way

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -163,6 +163,9 @@ img.kbbcode {
 #kbbcode-sup-button {
 	background-position: -90px 0;
 }
+#kbbcode-smilies-button {
+	background-position: -108px -18px;
+}
 #kbbcode-separator1,
 #kbbcode-separator2,
 #kbbcode-separator3,
