--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -240,3 +240,13 @@ input[type=radio]:checked + label {
 	background-image: none;
 	background-color:rgba(0, 0, 0, 0.1);
 }
+#kbbcode-smilies-button {
+    background-position: -108px -18px;
+}
+.kbbcode-preview-bottom {
+  border: 1px solid #dddddd;
+	padding:4px 12px;
+	margin:10px;
+	border-radius:4px;
+	min-height:150px;
+}
