--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -227,7 +227,6 @@ margin-left:-80px
 }
 #postform input[type=radio] {
 	display:none; 
-	margin:10px;
 }
 input[type=radio] + label {
 	display:inline-block;
@@ -238,7 +237,12 @@ input[type=radio] + label {
 }
 input[type=radio]:checked + label { 
 	background-image: none;
-	background-color:rgba(0, 0, 0, 0.1);
+	background-color:rgba(0, 0, 0, 0.07);
+	border:1px solid rgba(0, 0, 0, 0.2);;
+	border-radius:4px;
+}
+label img{
+    pointer-events: none;
 }
 #kbbcode-smilies-button {
     background-position: -108px -18px;
