A few general fixes.

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -6,7 +6,7 @@
 * @license http://www.gnu.org/copyleft/gpl.html GNU/GPL
 * @link http://www.kunena.org
 **/ 
-active, a:focus {
+a:active, a:focus {
 	outline: 0;
 }
 .kgooglemap {
