--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -343,14 +343,16 @@ width: 100px;
 display:none;
 }
 div.navbar > div > div.visible-phone.hidden-tablet > ul {
-    padding-bottom: 15px;
-    padding-left: 10px;
+  padding-top:0;
+  padding-left: 10px;
+	margin-top:5px;
 }
 #ktopicsform {
 	padding-bottom:10px;
 }
 .last-post-message {
-	padding-left:25%;
+	padding-left:30%;
+	vertical-align:middle !important;
 }
 .topic-item-unread {
 	border-left:3px solid green;
@@ -364,6 +366,24 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 	margin-top:5px;
 	min-height:20px;
 }
+.vid {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+		height: 0; 
+		overflow: hidden;
+}
+ 
+.vid iframe,
+.vid object,
+.vid embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width: 480px) { 
  .pagination .test ul > li > a, .pagination ul > li > span {
 	display:none;
