K3.1 Fixing some issues: #2385 #2383 #2380 #2351
#2385
#2383
#2380
#2351
+ integrate TFA login

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -362,9 +362,10 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 	height:100%;
 }
 .ksig {
-	padding-top:15px;
-	margin-top:5px;
+	padding-top:25px;
+	margin:5px;
 	min-height:20px;
+	padding-bottom:15px;
 }
 .vid {
     position: relative;
