K3.1 Blue Eagle J! 2.5.19: undefined editor tool #2410

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.forum.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.forum.css
@@ -2386,6 +2386,7 @@ BBCODE BUTTONS
 #Kunena ul#kbbcode-toolbar li a#kbbcode-previewbottom-button {background-position:-252px -18px;}
 #Kunena ul#kbbcode-toolbar li a#kbbcode-previewright-button {background-position:-270px -18px;}
 #Kunena ul#kbbcode-toolbar li a#kbbcode-help-button {background-position:-396px -18px;}
+#Kunena ul#kbbcode-toolbar li a#kbbcode-smilies-button {display:none;}
 
 #Kunena .kspoiler {
 	cursor:pointer;
