--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -266,22 +266,17 @@ div.kmsgtext-hide,
 div.kmsgtext-code,
 .highlight,
 div.kmsgtext-confidential {
-		margin:0 5px;
-    border-left: 4px solid #319ce2 ;
-  background: #fafafa;
-  color: #444444;
-  font-size: 12px;
-  line-height: 18px;
-  -moz-tab-size: 4;
-  tab-size: 4;
-  border-radius: 3px;
+	display: block;
+	border: 1px dotted;
+	margin: 5px 0pt;
+	padding: 5px;
+	font-style: italic;
 }
 #kwho > div > p,
 #kstats > div > p {
 	margin:0px;
 }
 .msgfooter {
-	position: absolute;
 	bottom: 0;
 	padding: 0 5px;
 	width:95%;
