K3.1 add style kmsgtext-confidential

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -266,9 +266,14 @@ div.kmsgtext-hide,
 div.kmsgtext-code,
 .highlight,
 div.kmsgtext-confidential {
+	font-size: 12px;
+  line-height: 18px;
+  -moz-tab-size: 4;
+  tab-size: 4;
+  border-radius: 3px;
 	display: block;
 	border: 1px dotted;
-	margin: 5px 0pt;
+	margin: 5px 0;
 	padding: 5px;
 	font-style: italic;
 }
