--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -135,6 +135,7 @@ input[type='checkbox']:focus {
 .kmessagepadding {
 	padding-left: 20px;
 	padding-top: 20px;
+	padding-bottom: 10px;
 }
 img {
 	max-width: 100%;
@@ -207,7 +208,7 @@ inline {
   padding: 15px;
 }
 .breadcrumb {
-	margin:15px 0 10px 0;
+	padding:8px 15px;
 }
 input[type='checkbox'] {
 	zoom: 1;
@@ -230,11 +231,10 @@ a:focus,
 [class*="badger"] {
     position: relative;
     margin: 15px 0;
-    padding: 39px 19px 14px;
+    padding: 39px 19px 0 14px;
     border-radius: 6px;
 		box-shadow: 0 0 6px #B2B2B2;
-		min-height:120px;
-
+		min-height:180px;
 }
 [class*="badger"]:after {
  		content: attr(data-badger);
@@ -267,24 +267,24 @@ div.kmsgtext-hide,
 div.kmsgtext-code,
 .highlight,
 div.kmsgtext-confidential {
-		margin:0 5px;
-    border-left: 4px solid #319ce2 ;
-  background: #fafafa;
-  color: #444444;
   font-size: 12px;
   line-height: 18px;
   -moz-tab-size: 4;
   tab-size: 4;
   border-radius: 3px;
+	display: block;
+	border: 1px dotted;
+	margin: 5px 0;
+	padding: 5px;
+	font-style: italic;
 }
 #kwho > div > p,
 #kstats > div > p {
 	margin:0px;
 }
 .msgfooter {
-	position: absolute;
 	bottom: 0;
-	padding:5px;
+	padding:0 5px;
 	width:95%;
 	height:20px;
 }
@@ -359,12 +359,15 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 	border-radius:2px 0 2px 0;
 }
 .kmessage {
-	height:100%;
+	min-height: 120px;
 }
 .ksig {
-	padding-top:15px;
-	margin-top:5px;
+	margin:5px;
 	min-height:20px;
+	padding-bottom:15px;
+}
+.ksignature {
+	margin-top:15px;
 }
 .vid {
     position: relative;
@@ -383,7 +386,9 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
     width: 100%;
     height: 100%;
 }
-
+.khistory {
+	min-height:150px;
+}
 @media (max-width: 480px) {
  .pagination .test ul > li > a, .pagination ul > li > span {
 	display:none;
@@ -434,4 +439,10 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 		width:60%;
 		margin-bottom:10px;
 	}
+}
+select#mode {
+margin-left: 65px;
+}
+select {
+margin-top: 5px;
 }
