K3.1 Crypsis small msg issue

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -274,7 +274,7 @@ div.kmsgtext-confidential {
   border-radius: 3px;
 	display: block;
 	border: 1px dotted;
-	margin: 5px 0;
+	margin: 5px;
 	padding: 5px;
 	font-style: italic;
 }
@@ -360,6 +360,7 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 }
 .kmessage {
 	min-height: 120px;
+	padding-bottom:10px;
 }
 .ksig {
 	margin:5px;
