K3.1 Add more options gender (part2)

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.forum.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.forum.css
@@ -2925,6 +2925,8 @@ HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 #Kunena .kicon-profile-flickr 			{ background-position: 0 -189px; }
 #Kunena .kicon-profile-friendfeed 		{ background-position: 0 -210px; }
 #Kunena .kicon-profile-gender-unknown 	{ background-position: 0 -231px; }
+#Kunena .kicon-profile-gender-trans 	{ background-position: 0 -231px; }
+#Kunena .kicon-profile-gender-cis 	{ background-position: 0 -231px; }
 #Kunena .kicon-profile-gtalk 			{ background-position: 0 -252px; }
 #Kunena .kicon-profile-icq 				{ background-position: 0 -273px; }
 #Kunena .kicon-profile-karmaminus 		{ background-position: 0 -294px; }
