--- a/components/com_kunena/site/template/crypsis/less/profile.less
+++ b/components/com_kunena/site/template/crypsis/less/profile.less
@@ -88,6 +88,12 @@
 .kicon-profile-gender-unknown {
 	background-position: 0 -231px;
 }
+.kicon-profile-gender-trans {
+	background-position: 0 -231px;
+}
+.kicon-profile-gender-cis {
+	background-position: 0 -231px;
+}
 .kicon-profile-facebook {
 	background-position: 0 -147px;
 }
