K 3.1 Blue Eagle J! 2.5.20: ".kwho_" CSS colours  #2470

--- a/components/com_kunena/site/template/crypsis/less/user.less
+++ b/components/com_kunena/site/template/crypsis/less/user.less
@@ -23,9 +23,7 @@
 .kwho-admin {
 	color: #FF0000 !important;
 }
+.kwho-blocked,
 .kwho-banned {
 	color: #A39D49 !important;
-}
-.kwho-blocked {
-	color: #ff0000 !important;
 }
