--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -200,14 +200,11 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	color: #666666 !important;
 }
 
-#Kunena .kwho-banned ,
+#Kunena .kwho-blocked,
+#Kunena a.kwho-blocked,
+#Kunena .kwho-banned,
 #Kunena a.kwho-banned {
 	color: #A39D49 !important;
-}
-
-#Kunena .kwho-blocked,
-#Kunena a.kwho-blocked {
-	color: #ff0000 !important;
 }
 
 /* MENU
