Optional username display #23

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -207,6 +207,12 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	color: #A39D49 !important;
 }
 
+#Kunena .kpost-username-optional,
+#Kunena a.kpost-username-optional {
+	font-size: 1.022em;
+	color: #A9A9A9 !important;
+}
+
 /* MENU
 ----------------------------------------------------------------------------------------------- */
 
