--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -390,6 +390,10 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 .khistory {
 	min-height:150px;
 }
+div.well.well-small dl.dl-horizontal dd {
+	margin-left:140px;
+	width:100%;
+}
 @media (max-width: 480px) {
  .pagination .test ul > li > a, .pagination ul > li > span {
 	display:none;
