K3.1 Crypsis html fixes (part2)

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -394,6 +394,9 @@ div.well.well-small dl.dl-horizontal dd {
 	margin-left:140px;
 	width:100%;
 }
+select#kchecktask {
+	margin:0
+}
 @media (max-width: 480px) {
  .pagination .test ul > li > a, .pagination ul > li > span {
 	display:none;
