K3.1 Crypsis html fixes

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -324,11 +324,7 @@ form {
 ul, ol {
 	padding:0;
 }
-.dl-horizontal dd {
-	margin-left:40px;
-	width:145px;
-	padding-left:40px;
-}
+
 .dl-horizontal dt {
 	width:auto;
 }
@@ -390,11 +386,7 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 .khistory {
 	min-height:150px;
 }
-div.well.well-small dl.dl-horizontal dd {
-	margin-left:140px;
-	width:100%;
-}
-select#kchecktask {
+#kchecktask {
 	margin:0
 }
 @media (max-width: 480px) {
