K3.1 Crypsis: Fix delete color messages

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -446,3 +446,9 @@ margin-left: 65px;
 select {
 margin-top: 5px;
 }
+.message-deleted {
+	background-color:rgba(0, 0, 0, 0.1);
+	padding:10px;
+	margin-bottom:15px;
+	border-radius:5px;
+}
