K3.1 Crypsis: html 7-6 update
* Fix language string issue on last post
* Fix markup edit message
* Fix markup actions

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -256,7 +256,6 @@ a:focus,
 	border:2px solid rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
- box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 legend {
 	color:inherit;
@@ -445,4 +444,30 @@ margin-left: 65px;
 }
 select {
 margin-top: 5px;
+}
+.post-image {
+	float: left;
+	margin-right: 10px;	
+	padding-top:2%;
+	padding-bottom:2%;
+}
+.post-desc {
+	padding:15px 0;
+}
+.post-info {
+	min-width:230px;
+}
+.img-thumbnail {
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	border:1px solid #ddd;
+	padding:4px;
+	position: relative;
+}
+.message-deleted {
+	background-color:rgba(0, 0, 0, 0.1);
+	padding:8px;
+	margin-bottom:15px;
+	border-radius:5px;
 }
