Few more cleanups

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -265,14 +265,14 @@ a:focus,
     padding: 8px 12px;
     font-weight: bold;
 	border-right:1px solid #ddd;
-	border-bottom:1px solid #ddd;}
-
+	border-bottom:1px solid #ddd;
+}
 .badger-left:after {
     left: 0;
     border-radius: 4px 0 4px 0;
 }
 .badger-info:after {
-		background: rgba(229, 229, 229, 0.4);
+	background: rgba(229, 229, 229, 0.4);
 }
 legend {
 	color:inherit;
