Topic Starter/Author fix

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -162,16 +162,16 @@ img {
 }
 .topic-starter {
 		background: rgba(229,229,229,0.4);
-		position: relative;
-		display: block;
+		display: inline-block;
 		height: 15px;
 		line-height: 0.8em;
-		margin-left: 9px;
 		border-radius: 0 0 4px 4px;
 		white-space: nowrap;
 		padding-top: 4px;
 		border: 1px solid #ddd;
 		border-top: 0 none;
+		padding-left: 8px;
+		padding-right: 8px;
 
 		&.topic-starter:after {
 			content: "Topic Author";
@@ -204,6 +204,7 @@ form > table > thead > tr > td > ul {
 }
 .profilebox {
 	margin-top: -4px;
+	width: 106%;
 }
 .kfrontend h1,
 .kfrontend h2,
