--- a/components/com_kunena/site/template/crypsis/less/icons.less
+++ b/components/com_kunena/site/template/crypsis/less/icons.less
@@ -7,7 +7,13 @@
 * @link http://www.kunena.org
 **/
 
-
+.large-kicon {
+  width: 18px;
+  height: 18px;
+  margin-right: 0em;
+  line-height: 18px;
+  font-size: 18px;
+}
 .ktopicmy {
 	background-image: url("icons/myflag.png");
 	width: 16px;
