--- a/components/com_kunena/site/template/crypsis/less/icons.less
+++ b/components/com_kunena/site/template/crypsis/less/icons.less
@@ -8,40 +8,14 @@
 **/
 
 .large-kicon {
-  width: 18px;
-  height: 18px;
+  width: 24px;
+  height: 24px;
   margin-right: 0em;
-  line-height: 18px;
-  font-size: 18px;
+  line-height: 24px;
+  font-size: 24px;
 }
-.ktopicmy {
-	background-image: url("icons/myflag.png");
-	width: 16px;
-	height: 16px;
-	margin-left: 2px;
-}
-.kforummoderated {
-	background: url("icons/tmoder.gif") no-repeat left center;
-	width: 16px;
-	height: 16px;
-}
-.ktopicattach {
-	background: url("icons/attachment.png") no-repeat left center;
-	margin: 2px;
-	width: 32px;
-	height: 32px;
-	float: right;
-}
-.kfavoritestar-grey {
-	background: url("icons/favoritestar-grey.png") no-repeat left center;
-	width: 16px;
-	height: 16px;
-}
-.ktopiclocked,
-.kforumlocked {
-	background: url("icons/lock_sm.png") no-repeat left center;
-	width: 16px;
-	height: 16px;
+.icon-feed::before {
+  color:orange
 }
 .kfile-input {
 	display: block;
@@ -53,16 +27,6 @@
 	min-height: 5px;
 	width: 100%;
 	background-color: #ffc;
-}
-.kunreadforum {
-	background: url("icons/folder.png") no-repeat left center;
-	width: 32px;
-	height: 32px;
-}
-.krss {
-	background: url("icons/rss.png") no-repeat left center;
-	width: 24px;
-	height: 24px;
 }
 .kicon {
 	border: 0;
